--- a/package.json
+++ b/package.json
@@ -8,15 +8,19 @@
   },
   "dependencies": {
     "body-parser": "~1.15.2",
+    "cheerio": "^1.0.0-rc.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.14.0",
+    "marked": "^1.1.1",
     "mongoose": "^5.2.9",
     "morgan": "~1.9.1",
     "nib": "^1.1.2",
     "nodemon": "^1.18.3",
     "pug": "~2.0.0-beta6",
+    "request": "^2.88.2",
     "serve-favicon": "~2.3.0",
-    "stylus": "0.54.5"
+    "stylus": "0.54.5",
+    "turndown": "^6.0.0"
   }
 }
