--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "pug": "~2.0.0-beta6",
     "request": "^2.88.2",
     "serve-favicon": "~2.3.0",
+    "socket.io": "^2.3.0",
     "stylus": "0.54.5",
     "turndown": "^6.0.0"
   }
