--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.14.0",
+    "lodash": "^4.17.20",
     "marked": "^1.1.1",
     "mongoose": "^5.2.9",
     "morgan": "~1.9.1",
